# IPSEC-

./: .gitconfig  .gitignore  0001-simple-read-write.patch  README.md  a.out  decrypt  decrypt.c  decrypt_test.c  encrypt  encrypt.c  file  head.h  inp  input_original.c  input_output_original.c  main.c  meson.build  t  thread_1.c  thread_2.c  yes
