project('IPSEC-', 'c',
  version : '0.1',
  default_options : ['warning_level=3'])

# Add your source files here
sources = [
  'decrypt.c',
  'encrypt.c',
  'head.h',
  'input_original.c',
  'main.c',
]

# Create an executable target
executable('IPSEC-',
           sources,
           install : true)
